--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Jarama Color</title>
 </head>
 <body>
-    <header class="container-fluid bg-info d-flex justify-content-center">
-        <p class="text-light mb-0 p-2 fs-4">Contactanos +56961448079</p>
+    <header class="container-fluid custom-header d-flex justify-content-center">
+        <p class="mb-0 p-2 fs-4">Contactanos +56961448079</p>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bs-light-bg-subtle" id="menu">
         <div class="container-fluid">
