--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Jarama Color</title>
 </head>
 <body>
     <header class="container-fluid custom-header d-flex justify-content-center">
-        <p class="mb-0 p-2 fs-4">Contactanos +56961448079</p>
+        <div>
+            <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
+            <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
+        </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bs-light-bg-subtle" id="menu">
         <div class="container-fluid">
@@ -45,7 +51,7 @@
    <br>
    <section class="py-5">
     <div class="container text-center">
-        <h2 id="DESTACADOS">DESTACADOS</h2>
+        <h2 id="DESTACADOS fw-bold">DESTACADOS</h2>
         <hr class="custom-hr">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -202,15 +208,14 @@
 </div>
 <br>
 
-<footer class="py-4 bg-info text-white">
+<footer class="py-4 bg-info text-secondary custom-header">
   <div class="container d-flex justify-content-between align-items-center">
-      <p class="mb-0">Jarama Color</p>
+      <p class="mb-0 ">Jarama Color</p>
       <div>
-          <a href="#" class="text-white mx-2"><i class="fab fa-github fa-2x"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-linkedin fa-2x"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-twitter-square fa-2x"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-facebook fa-2x"></i></a>
-      </div>
+        <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
+        <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
+    </div>
   </div>
 </footer>
 
