--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Jarama Color</title>
 </head>
 <body>
-    <header class="container-fluid custom-header d-flex justify-content-center">
+    <header class="container-fluid custom-header d-flex justify-content-center py-2">
         <div>
             <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
             <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
@@ -21,20 +22,20 @@
     <nav class="navbar navbar-expand-lg navbar-light bs-light-bg-subtle" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo final.jpg" alt="" width="100" height="100" class="d-inline-block align-text-top">
+                <img src="assets/img/logo final.jpg" alt="" width="75" height="75" class="d-inline-block align-text-top">
               </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active"  href="#" style="color: #45F882">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Catalogo</a>
+                <a class="nav-link" href="#" style="color: #45F882">Catalogo</a>
               </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success bg-info text-white" type="submit">Search</button>
+              <button class="btn btn-outline-success text-white" type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -51,7 +52,7 @@
    <br>
    <section class="py-5">
     <div class="container text-center">
-        <h2 id="DESTACADOS fw-bold">DESTACADOS</h2>
+        <h2 id="DESTACADOS" class="fw-bold">DESTACADOS</h2>
         <hr class="custom-hr">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -60,7 +61,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Título 1</h5>
                         <p class="card-text">Descripción corta 1</p>
-                        <a href="#" class="btn btn-info text-white">Ver</a>
+                        <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                     </div>
                 </div>
             </div>
@@ -70,7 +71,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Título 2</h5>
                         <p class="card-text">Descripción corta 2</p>
-                        <a href="#" class="btn btn-info text-white">Ver</a>
+                        <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                     </div>
                 </div>
             </div>
@@ -80,7 +81,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Título 3</h5>
                         <p class="card-text">Descripción corta 3</p>
-                        <a href="#" class="btn btn-info text-white">Ver</a>
+                        <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                     </div>
                 </div>
             </div>
@@ -90,7 +91,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Título 4</h5>
                         <p class="card-text">Descripción corta 4</p>
-                        <a href="#" class="btn btn-info text-white">Ver</a>
+                        <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                     </div>
                 </div>
             </div>
@@ -100,7 +101,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Título 5</h5>
                         <p class="card-text">Descripción corta 5</p>
-                        <a href="#" class="btn btn-info text-white">Ver</a>
+                        <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                     </div>
                 </div>
             </div>
@@ -110,7 +111,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Título 6</h5>
                         <p class="card-text">Descripción corta 6</p>
-                        <a href="#" class="btn btn-info text-white">Ver</a>
+                        <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                     </div>
                 </div>
             </div>
@@ -120,7 +121,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Título 7</h5>
                         <p class="card-text">Descripción corta 7</p>
-                        <a href="#" class="btn btn-info text-white">Ver</a>
+                        <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                     </div>
                 </div>
             </div>
@@ -130,17 +131,17 @@
                     <div class="card-body">
                         <h5 class="card-title">Título 8</h5>
                         <p class="card-text">Descripción corta 8</p>
-                        <a href="#" class="btn btn-info text-white">Ver</a>
+                        <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                     </div>
                 </div>
             </div>
             <div class="col">
               <div class="card border-info text-black h-100">
-                  <img src="assets/img/9.jpg" alt="Featured Image 8" class="card-img-top">
+                  <img src="assets/img/9.jpg" alt="Featured Image 9" class="card-img-top">
                   <div class="card-body">
-                      <h5 class="card-title">Título 8</h5>
-                      <p class="card-text">Descripción corta 8</p>
-                      <a href="#" class="btn btn-info text-white">Ver</a>
+                      <h5 class="card-title">Título 9</h5>
+                      <p class="card-text">Descripción corta 9</p>
+                      <button class="btn btn-outline-success text-white" type="submit">Ver</button>
                   </div>
               </div>
           </div>
@@ -149,78 +150,89 @@
 </section>
 
 <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-      <div class="carousel-item active">
-          <div class="d-flex justify-content-center">
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/1.jpg" class="d-block" alt="Imagen 1" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/1.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/2.png" class="d-block" alt="Imagen 2" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/2.png">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/3.jpg" class="d-block" alt="Imagen 3" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/3.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/4.jpg" class="d-block" alt="Imagen 4" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/4.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/5.png" class="d-block" alt="Imagen 5" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/5.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/6.png" class="d-block" alt="Imagen 6" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/6.jpg">
-              </div>
-          </div>
-      </div>
-      <div class="carousel-item">
-          <div class="d-flex justify-content-center">
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/7.jpg" class="d-block" alt="Imagen 7" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/7.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/8.jpg" class="d-block" alt="Imagen 8" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/8.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                  <img src="assets/img/carrusel/9.jpg" class="d-block" alt="Imagen 9" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/9.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                <img src="assets/img/carrusel/10.jpg" class="d-block" alt="Imagen 10" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/9.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                <img src="assets/img/carrusel/11.jpg" class="d-block" alt="Imagen 11" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/9.jpg">
-              </div>
-              <div class="carousel-item-img-wrapper">
-                <img src="assets/img/carrusel/12.jpg" class="d-block" alt="Imagen 12" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/9.jpg">
-              </div>
-              <!-- Añadir más imágenes si es necesario -->
-          </div>
-      </div>
-      <!-- Añadir más div.carousel-item si es necesario -->
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-  </button>
-</div>
-<br>
-
-<footer class="py-4 bg-info text-secondary custom-header">
-  <div class="container d-flex justify-content-between align-items-center">
-      <p class="mb-0 ">Jarama Color</p>
-      <div>
-        <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
-        <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="d-flex justify-content-center">
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/dragon_ball.png" class="d-block" alt="Imagen 1" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/dragon_ball.png">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/jujutsu_kaisen.png" class="d-block" alt="Imagen 2" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/2.png">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/one_piece_logo.png" class="d-block" alt="Imagen 3" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/3.jpg">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/Tokyo Revengers.png" class="d-block" alt="Imagen 4" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/4.jpg">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/tokyo_ghoul.png" class="d-block" alt="Imagen 5" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/5.jpg">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/attack-on-titan.png" class="d-block" alt="Imagen 6" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/6.jpg">
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="d-flex justify-content-center">
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/demon slayer.png" class="d-block" alt="Imagen 7" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/7.jpg">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/my_no_hero_academia.png" class="d-block" alt="Imagen 8" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/8.jpg">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                    <img src="assets/img/carrusel/fullmetal alchemist.png" class="d-block" alt="Imagen 9" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/9.jpg">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                  <img src="assets/img/carrusel/black_clover.png" class="d-block" alt="Imagen 10" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/9.jpg">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                  <img src="assets/img/carrusel/naruto_shippuden.png" class="d-block" alt="Imagen 11" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/9.jpg">
+                </div>
+                <div class="carousel-item-img-wrapper">
+                  <img src="assets/img/carrusel/One Punch Man.png" class="d-block" alt="Imagen 12" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-whatever="assets/img/carrusel/9.jpg">
+                </div>
+                <!-- Añadir más imágenes si es necesario -->
+            </div>
+        </div>
+        <!-- Añadir más div.carousel-item si es necesario -->
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
   </div>
+  <br>
+<footer class="py-4 text-secondary custom-header">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-4 d-flex align-items-center">
+                <img src="assets/img/logo final.jpg" alt="" width="120" height="120" class="d-inline-block align-text-top">
+                <div class="ms-3">
+                    <h5 style="color: #45F882,">Información de contacto</h5>
+                    <p style="color: #45F882">Teléfono: +56 9 61448079</p>
+                    <p style="color: #45F882">Email: info@jaramacolor.com</p>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex justify-content-center">
+                <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
+                <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
+            </div>
+        </div>
+        <hr class="custom-hr">
+        <div class="text-center">
+            <p class="mb-0" style="color: #45F882">&copy; 2024 Jarama Color. Todos los derechos reservados.</p>
+        </div>
+    </div>
 </footer>
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/scripts.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/scripts.js"></script>  
 </body>
 </html>
