--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <p id="modalDescription">Descripción de la Polera</p>
             </div>
             <div class="modal-footer">
-                <a href="https://wa.me/1234567890?text=Hola,%20quiero%20más%20información%20sobre%20tu%20producto" class="btn btn-whatsapp" target="_blank">
+                <a href="https://w.app/Rtd4xw" class="btn btn-whatsapp" target="_blank">
                     <i class="fab fa-whatsapp"></i> Contactar por WhatsApp
                 </a>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
