--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="container-fluid custom-header d-flex justify-content-center py-2">
         <div>
-            <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
+            <a href="https://w.app/Rtd4xw" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
             <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
         </div>
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
-                <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
+                <a href="https://w.app/Rtd4xw" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
                 <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
                 <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
             </div>
