--- a/catalogo.html
+++ b/catalogo.html
@@ -17,8 +17,8 @@
     <header class="container-fluid custom-header d-flex justify-content-center py-2">
         <div>
             <a href="https://w.app/Rtd4xw" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
-            <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="https://www.instagram.com/jaramacolor?utm_source=qr&igsh=MWw3cW9tcHMyb24wdQ==" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61556638503592" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bs-light-bg-subtle" id="menu">
@@ -59,9 +59,12 @@
                 <a href="catalogo.html?category=BlueLock" class="btn btn-outline-success text-white m-2">Blue Lock</a>
                 <a href="catalogo.html?category=ChainsawMan" class="btn btn-outline-success text-white m-2">Chainsaw Man</a>
                 <a href="catalogo.html?category=DragonBallZ" class="btn btn-outline-success text-white m-2">Dragon Ball Z</a>
+                <a href="catalogo.html?category=DeathNote" class="btn btn-outline-success text-white m-2">Death Note</a>
                 <a href="catalogo.html?category=DemonSlayer" class="btn btn-outline-success text-white m-2">Demon Slayer</a>
                 <a href="catalogo.html?category=Evangelion" class="btn btn-outline-success text-white m-2">Evangelion</a>
                 <a href="catalogo.html?category=FullmetalAlchemist" class="btn btn-outline-success text-white m-2">Fullmetal Alchemist</a>
+                <a href="catalogo.html?category=Haikyu" class="btn btn-outline-success text-white m-2">Haikyū!!</a>
+                <a href="catalogo.html?category=HellsParadise" class="btn btn-outline-success text-white m-2">Hell's Paradise</a>
                 <a href="catalogo.html?category=HunterXHunter" class="btn btn-outline-success text-white m-2">Hunter X Hunter</a>
                 <a href="catalogo.html?category=JujutsuKaisen" class="btn btn-outline-success text-white m-2">Jujutsu Kaisen</a>
                 <a href="catalogo.html?category=KaijuNo8" class="btn btn-outline-success text-white m-2">Kaiju No. 8</a>
@@ -98,7 +101,9 @@
                 <img id="modalImage" src="" alt="Imagen del producto" class="img-fluid">
                 <h5 id="modalTitle"></h5>
                 <p id="modalDescription"></p>
-                <a id="whatsappLink" class="btn btn-success" target="_blank">Contactar por WhatsApp</a>
+                <a id="whatsappLink" class="btn btn-success" target="_blank">WhatsApp</a>
+                <a id="instagramLink" class="btn btn-danger" target="_blank">Instagram</a>
+                <a id="facebookLink" class="btn btn-primary" target="_blank">Facebook</a>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
