--- a/catalogo.html
+++ b/catalogo.html
@@ -16,7 +16,7 @@
 <body>
     <header class="container-fluid custom-header d-flex justify-content-center py-2">
         <div>
-            <a href="https://w.app/Rtd4xw" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
+            <a href="https://wa.me/56961448079" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
             <a href="https://www.instagram.com/jaramacolor?utm_source=qr&igsh=MWw3cW9tcHMyb24wdQ==" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="https://www.facebook.com/profile.php?id=61556638503592" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
         </div>
