--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Jarama Color</title>
 </head>
 <body>
     <header class="container-fluid custom-header d-flex justify-content-center py-2">
+    <div class="text-center">
         <div>
             <a href="https://wa.me/56961448079" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
             <a href="https://www.instagram.com/jaramacolor?utm_source=qr&igsh=MWw3cW9tcHMyb24wdQ==" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
             <a href="https://www.facebook.com/profile.php?id=61556638503592" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
         </div>
+        <div class="mt-2">
+            <p class="text-white mb-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Ofrecemos envíos a todo Chile con la opción de pago al recibir el producto">Envíos</p>
+            <p class="text-white" data-bs-toggle="tooltip" data-bs-placement="left" title="Los pedidos se entregan en un plazo de 2 a 5 días hábiles">Tiempo de entrega</p>
+        </div>
+    </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bs-light-bg-subtle" id="menu">
         <div class="container-fluid">
@@ -175,8 +180,7 @@
     </div>
 </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/scripts.js"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>    <script src="assets/js/scripts.js"></script>  
     <script src="assets/js/catalogo.js"></script>  
 
 </body>
