--- a/catalogo.html
+++ b/catalogo.html
@@ -14,10 +14,16 @@
 
 <body>
     <header class="container-fluid custom-header d-flex justify-content-center py-2">
-        <div>
-            <a href="https://wa.me/56961448079" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
-            <a href="https://www.instagram.com/jaramacolor?utm_source=qr&igsh=MWw3cW9tcHMyb24wdQ==" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=61556638503592" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
+        <div class="text-center">
+            <div>
+                <a href="https://wa.me/56961448079" class="text-white mx-2 social-icon"><i class="fab fa-whatsapp fa-2x"></i></a>
+                <a href="https://www.instagram.com/jaramacolor?utm_source=qr&igsh=MWw3cW9tcHMyb24wdQ==" class="text-white mx-2 social-icon"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61556638503592" class="text-white mx-2 social-icon"><i class="fab fa-facebook fa-2x"></i></a>
+            </div>
+            <div class="mt-2">
+                <p class="text-white mb-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Ofrecemos envíos a todo Chile con la opción de pago al recibir el producto">Envíos</p>
+                <p class="text-white" data-bs-toggle="tooltip" data-bs-placement="left" title="Los pedidos se entregan en un plazo de 2 a 5 días hábiles">Tiempo de entrega</p>
+            </div>
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bs-light-bg-subtle" id="menu">
