--- a/catalogo.html
+++ b/catalogo.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="catalogo.html" style="color: #45F882">Catálogo</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="personalizar.html" style="color: #45F882">Personaliza</a>
+                      </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
