--- a/personalizar.html
+++ b/personalizar.html
@@ -93,10 +93,10 @@
                 <div id="controls" class="d-flex flex-wrap gap-2 justify-content-center">
                     <br>
                     <select id="imageSelector" class="form-select">
-                        <option value="assets/img/negra.png">Negra</option>
-                        <option value="assets/img/blanco.png">Blanco</option>
-                        <option value="assets/img/azul.jpg">Azul Royal</option>
-                        <option value="assets/img/rojo.jpg">Rojo</option>
+                        <option value="https://live.staticflickr.com/65535/53956193789_53ea1da93c_o.png">Negra</option>
+                        <option value="https://live.staticflickr.com/65535/53956320485_6d6d3f0f47_o.png">Blanco</option>
+                        <option value="https://live.staticflickr.com/65535/53956193664_c796cd723d_o.jpg">Azul Royal</option>
+                        <option value="https://live.staticflickr.com/65535/53956119203_39ff84f22e_o.jpg">Rojo</option>
                     </select>
                     <input type="file" id="imageLoader" class="form-control" title="Subir imagen">
                     <a id="whatsappLink" href="https://wa.me/?text=" class="btn btn-success" target="_blank" rel="noopener noreferrer">
