--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bs-light-bg-subtle" id="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo final.jpg" alt="" width="75" height="75" class="d-inline-block align-text-top">
+                <img src="https://live.staticflickr.com/65535/53954554691_fef794b45f_b.jpg" alt="" width="75" height="75" class="d-inline-block align-text-top">
               </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -53,7 +53,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/img/slide1.png" class="d-block w-100 img-fluid custom-carousel-image" alt="slide1">
+                <img src="https://live.staticflickr.com/65535/53953637407_08c75496b8_b.jpg" class="d-block w-100 img-fluid custom-carousel-image" alt="slide1">
             </div>
         </div>
     </div>
@@ -164,7 +164,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-4 d-flex align-items-center">
-                <img src="assets/img/logo final.jpg" alt="" width="120" height="120" class="d-inline-block align-text-top">
+                <img src="https://live.staticflickr.com/65535/53954554691_fef794b45f_b.jpg" alt="" width="120" height="120" class="d-inline-block align-text-top">
                 <div class="ms-3">
                     <h5 style="color: #45F882,">Información de contacto</h5>
                     <p style="color: #45F882">Teléfono: +56 9 61448079</p>
